feature to create JSON files for each feed item and invoke an async event to publish for further processsing